--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/index.html
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/index.html
@@ -1,256 +1,199 @@
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Agencia de publicidad</title>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WeThink</title>
     <!-- CSS BOOTSTRAP -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- ICONOS BOOTSTRAP -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
+    <link rel="stylesheet" href="style.css">
+    <!-- FONT TITULO -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&display=swap" rel="stylesheet">
+    <!-- FONT PARRAFO -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap" rel="stylesheet">
+    <!-- FONT H2,H3,H4 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+</head>
 
-  <body>
+<body>
     <!-- INICIO NAVBAR -->
-    <div class="container">
-      <header
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
-      >
-        <a
-          href="/"
-          class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
-        >
-          <i class="bi bi-emoji-smile"></i
-          ><!-- REEMPLAZAR POR LOGO DE LA AGENCIA -->
+    <div class="container-fluid bdn">
+      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
+          <img src= "img/logo-diamante-blanco.png"  style="width: 15%;" alt="logo">
         </a>
-
+  
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li>
-            <a href="index.html" class="nav-link px-2 link-secondary">Inicio</a>
-          </li>
-          <li>
-            <a href="#servicios" class="nav-link px-2 link-dark">Servicios</a>
-          </li>
-          <li>
-            <a href="#contacto" class="nav-link px-2 link-dark">Contacto</a>
-          </li>
+          <li><a href="index.html" class="nav-link px-2 link-ul">Inicio</a></li>
+          <li><a href="#servicios" class="nav-link px-2 link-ul">Servicios</a></li>
+          <li><a href="#contacto" class="nav-link px-2 link-ul">Contacto</a></li>
         </ul>
-
+  
         <div class="col-md-3 text-end">
-          <button type="button" class="btn btn-outline-primary me-2">
-            Iniciar Sesion
-          </button>
-          <button type="button" class="btn btn-primary">Registrate</button>
+          <a href="/registro"><button type="button" class="btn boton-registrate">Registrate</button></a>
+          <a href="/login"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Iniciar Sesion</button></a>
         </div>
       </header>
     </div>
-    <!-- FIN NAVBAR -->
+      <!-- FIN NAVBAR -->
 
-    <!-- INICIO SECCION PRINCIPAL -->
-    <section>
-      <h1 id="typewriter"></h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum recusandae
-        fuga nam, delectus libero sed quas minima corrupti vitae reiciendis
-        voluptates et ut, aliquam reprehenderit porro dolorem totam modi? Ullam?
-      </p>
-    </section>
-    <!-- FIN SECCION PRINCIPAL -->
+      <!-- INICIO SECCION PRINCIPAL -->
+      <section class="container-fluid container-seccion-principal" >
 
-    <!-- INICIO CARRUSEL -->
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="2000">
-          <img
-            src="img/publicidadCalle.jpg"
-            class="d-block w-100"
-            alt="img-1"
-          />
-        </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="img/calleUSA.jpg" class="d-block w-100" alt="img-2" />
-        </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="img/revistaVoge.jpg" class="d-block w-100" alt="img-3" />
-        </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="img/cocacolaMoza.jpg" class="d-block w-100" alt="img-3" />
-        </div>
-      </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleControls"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleControls"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <!-- FIN CARRUSEL -->
-
-    <!-- INICIO SECCION SERVICIOS -->
-    <div class="container-fluid" id="servicios">
-      <h3>Nuestros Servicios</h3>
+      <div class="row seccion-principal">
+          <div class="container-fluid text-black text-center py-2">
+            <img src="/img/logos/logo-negro.png"  class="pt-2" alt="" style="width: 250px; height: 60px;">
+            <h1 id="typewriter" class="pt-2" style="font-size: 22px;"></h1>
+          </div>
+          </div>
+      
       <div class="row">
-        <div class="col">
-          <img src="" alt="" />
-          <div>
-            <h3>Logo</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio dicta delectus nam porro. Suscipit non corrupti dolorum
-              obcaecati? Officiis distinctio laudantium sequi pariatur aliquam
-              ipsa porro corrupti quidem repellat magni.
-            </p>
+        <div class="container-fluid text-black">
+          <div class="container d-flex flex-column justify-content-center align-items-center">
+            <div class="row">
+              <div class="col-12 my-1 contenedor-imagen-principal">
+                <img src="/img/pngegg-23.png">
+              </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+            <div class="col-9 text-center contenedor-texto-principal mt-2">
+              <p class="pt-1">Interesados y dispuestos a darle lo mejor a nuestros clientes, tenemos contactos con las mejores imprentas, carteleras, agencias de fotografia, agencias de modelaje y muchos mas nombres que sin ellos no seriamos la unica empresa completa y de calidad. Nos gusta trabajar con lo mejor para ser los mejores, ¿Y vos?</p>
+            </div>
+          </div>
           </div>
         </div>
-        <div class="col">
-          <img src="" alt="" />
-          <div>
-            <h3>Carteleria</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-              voluptatibus, provident eius ut perspiciatis saepe explicabo
-              eveniet dolor, sed molestiae totam modi recusandae quibusdam
-              possimus voluptas nobis voluptates cupiditate corrupti.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <img src="" alt="" />
-          <div>
-            <h3>Comunicacion</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero,
-              nobis ipsam atque expedita beatae mollitia itaque voluptate ullam
-              sint deleniti dolorem aliquid veritatis facere sed aliquam nisi
-              sunt a sapiente?
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <img src="" alt="" />
-          <div>
-            <h3>Seo</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-              voluptates architecto laboriosam ab ducimus illo impedit, sunt ea
-              iure veritatis illum neque itaque officia consectetur natus, est
-              alias aut assumenda!
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
-    <!-- FIN SECCION SERVICIOS -->
 
-    <!-- INICIO SECCION CLIENTES -->
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5" id="contacto">
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">
-            Nuestros clientes <span class="text-muted">asdasdsdad</span>
-          </h2>
-          <p class="lead">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, nisi
-            ex.
-          </p>
+      </section>
+      <!-- FIN SECCION PRINCIPAL -->
+
+      <!-- INICIO SECCION SERVICIOS -->
+      <div class="container-fluid d-flex justify-content-center align-items-center seccion-servicio" id="servicios">
+          <div class="row">
+        <div class="card col-2">
+          <div class="box">
+            <div class="content">
+              <img src="/img/icono-tarjeta-logo.svg" style="width: 40%;" alt="">
+              <h3>Logo</h3>
+              <p>No te preocupes por no saber, nosotros te damos opciones de logos que haran a todos hablar sobre tu marca</p>
+            </div>
+          </div>
         </div>
-<!--        <div class="col-md-5">
-          <img src="img/logosClientes.jpg" width="250" height=150"
-          alt="clientes"> 
+
+        <div class="card col-2">
+          <div class="box">
+            <div class="content">
+              <img src="/img/icono-tarjeta-carteleria.svg" style="width: 50%;" alt="">
+              <h3>Carteleria</h3>
+              <p>Nuestro equipo tiene los conocimientos para que cada imagen sobre tus productos llamen la atencion sin importar que utilidad tengan</p>
+            </div>
+          </div>
+        </div>
+    
+
+        <div class="card col-2">
+          <div class="box">
+            <div class="content">
+              <img src="/img/icono-tarjeta-venta.svg" style="width: 50%;" alt="">
+              <h3>Venta</h3>
+              <p>Los compradores NECESITAN comprar TU producto. Deja en nuestras manos, que vendemos mejor que todos</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card col-2">
+          <div class="box">
+            <div class="content">
+              <img src="/img/icono-tarjeta-seo.svg" style="width: 50%;" alt="">
+              <h3>Seo</h3>
+              <p>Analizamos la eficacia y optimizamos tu sitio web para posicionar y llevar tu marca a otro nivel</p>
+            </div>
+          </div>
         </div>
       </div>
-    </div> -->
-    <!-- FIN SECCION CLIENTES -->
+      </div>
+      <!-- FIN SECCION SERVICIOS -->
 
-    <!-- INICIO SECCION CONTACTO -->
-    <div class="container w-50">
+      <!-- INICIO SECCION CLIENTES -->
+      <div class="container-fluid col-xl-12 col-xxl-8 py-3 seccion-clientes">
+        <div class="row text-center">
+            <h1>Nuestros Clientes</h1>
+            <p>Creyeron en nosotros y nuestra personalidad. Ahora estan dentro de las marcas mas reconocidas</p>
+        </div>
+        <div class="row py-2 d-flex justify-content-evenly align-items-center contenedor-logos">
+                    <img src="/img/logos/logo-cliente-1.png" alt="logo1">
+                    <img src="/img/logos/logo-cliente-2.png" alt="logo2">
+                    <img src="/img/logos/logo-cliente-3.png" alt="logo3">
+                    <img src="/img/logos/logo-cliente-4.png" alt="logo4">
+                    <img src="/img/logos/logo-cliente-5.png" alt="logo5">
+                    <img src="/img/logos/logo-cliente-6.png" alt="logo6">
+        </div>
+      </div> 
+      <!-- FIN SECCION CLIENTES -->
+
+      <!-- INICIO SECCION CONTACTO -->
+      <div class="container-fluid seccion-contacto py-5" id="contacto">
+
+        <div class="row d-flex justify-content-around align-items-center">
+        <div class="col-2">
+            <img src="/img/pngegg.png" style="width: 350px;" alt="">
+        </div>
+
+      <div class="col-10 w-50 my-5 py-5 seccion-contacto-formulario">
+
       <form>
-        <h3>Contactanos:</h3>
-        <div class="mb-3">
-          <input
-            type="email"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="Email"
-          />
+        <div class="d-flex justify-content-center align-items-center">
+          <h1 class="text-black">Contacto</h1>
         </div>
-        <div class="mb-3">
-          <textarea
-            class="form-control"
-            id="exampleFormControlTextarea1"
-            rows="3"
-            placeholder="Escribe tu mensaje..."
-          ></textarea>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">
-          Enviar
-        </button>
+      <div class="mb-3">
+        <input type="email" class="form-control" placeholder="Email">
+      </div>
+      <div class="mb-3">
+        <textarea class="form-control"  rows="3" placeholder="Escribe tu mensaje..."></textarea>
+      </div>
+      <div class="d-flex justify-content-center align-items-center">
+      <button class="w-50 text-center text-black btn boton-enviar " type="submit">Enviar</button>
+      </div>
       </form>
+
+      </div>
+
+      </div>
     </div>
-    <!-- FIN SECCION CONTACTO -->
+      <!-- FIN SECCION CONTACTO -->
 
-    <!-- INICIO FOOTER -->
-    <div class="container">
-      <footer
-        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
-      >
-        <p class="col-md-4 mb-0 text-muted">&copy; Grupo 3, Egg Cooperation</p>
-
-        <a
-          href="/"
-          class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
-        >
-          <i class="bi bi-emoji-smile"></i
-          ><!-- REEMPLAZAR POR LOGO DE LA AGENCIA -->
-        </a>
-
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item">
-            <a href="index.html" class="nav-link px-2 text-muted">Inicio</a>
-          </li>
-        </ul>
-      </footer>
-    </div>
-    <!-- FIN FOOTER -->
+      <!-- INICIO FOOTER -->
+      <div class="container-fluid footer">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+          <p class="col-md-4 mb-0" style="font-size: 15px;">&copy; Grupo 3, Egg Cooperation</p>
+      
+          <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+          <img src="/img/logos/logo-diamante-blanco.png" style="width: 45px; height: 40px; padding-right: 10px;" alt="">
+          <img src="/img/logos/logo-blanco.png" style="width: 20%;" alt="">
+          </a>
+      
+          <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-white">Inicio</a></li>
+          </ul>
+        </footer>
+      </div>
+      <!-- FIN FOOTER -->
 
     <!-- JAVASCRIPT BOOTSTRAP -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <!-- SCRIPT EFECTO MAQUINA DE ESCRIBIR -->
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <!-- JAVASCRIPT -->
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
