--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/login.html
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/login.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
     <!-- CSS -->
     <link rel="stylesheet" href="./login.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&family=Titillium+Web&display=swap" rel="stylesheet">
@@ -40,6 +39,7 @@
 
     <section class="contenedorLogin">
         <div>
+           //agregar th// 
             <form action="/inicio" method="POST" class="form-login" enctype="multipart/form-data">
                 <div class="titulos-form">Email</div>
                 <div>
