--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/index.html
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/index.html
@@ -29,18 +29,18 @@
     <!-- INICIO NAVBAR -->
     <div class="container-fluid bdn">
       <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
+        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none">
           <img src= "img/logos/logo-diamante-blanco.png"  style="width: 15%;" alt="logo">
         </a>
-  
+          
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="index.html" class="nav-link px-2 link-ul">Inicio</a></li>
+          <li><a href="/" class="nav-link px-2 link-ul">Inicio</a></li>
           <li><a href="#servicios" class="nav-link px-2 link-ul">Servicios</a></li>
           <li><a href="#contacto" class="nav-link px-2 link-ul">Contacto</a></li>
         </ul>
   
         <div class="col-md-3 text-end">
-          <a href="/registro"><button type="button" class="btn boton-registrate">Registrate</button></a>
+          <a href="/registro"><button type="button" class="btn boton-registrate mx-2">Registrate</button></a>
           <a href="/login"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Iniciar Sesion</button></a>
         </div>
       </header>
@@ -55,7 +55,7 @@
             <img src="/img/logos/logo-negro.png"  class="pt-2" alt="" style="width: 250px; height: 60px;">
             <h1 id="typewriter" class="pt-2" style="font-size: 22px;"></h1>
           </div>
-          </div>
+      </div>
       
       <div class="row">
         <div class="container-fluid text-black">
@@ -183,7 +183,7 @@
           </a>
       
           <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-white">Inicio</a></li>
+            <li class="nav-item"><a href="/" class="nav-link px-2 text-white">Inicio</a></li>
           </ul>
         </footer>
       </div>
@@ -194,6 +194,6 @@
     <!-- SCRIPT EFECTO MAQUINA DE ESCRIBIR -->
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <!-- JAVASCRIPT -->
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
