--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/registro.html
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/registro.html
@@ -4,84 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeThink-registro</title>
+    <title>WeThink</title>
     <!-- CSS BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- ICONOS BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
     <!-- CSS -->
     <link rel="stylesheet" href="./registro.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <!-- INICIO NAVBAR -->
-    <div class="container-fluid">
-        <header class="d-flex flex-wrap align-items-center justify-content-md-between">
-          <a class="d-flex col-md-3">
-               <img class="diamante" src="https://see.fontimg.com/api/renderfont4/vmpKZ/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjMzNFMkRDIiwiYmdjIjoiIzAxMDEwMSIsInQiOjF9/ZGFzaGJvYXJk/ceceps-handwriting.png" alt="Handwriting fonts">
-               <img id="lettering" src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png" alt="Lettering fonts">
-          </a>
-    
-          <ul class="nav">
-            <li><a href="index.html" class="nav-link listaNav">Inicio</a></li>         
-            <li><a href="dashboard.html" class="nav-link listaNav">Atras</a></li>
-          </ul>
-    
-          <div class="col-md-3">
-            <button type="button" class="btn btn-outline-primary me-2 button1"><img class="MiPerfil" src="/botones/MiPerfil.png"/>Mi Perfil</button> 
-            <button type="button" class="btn btn-outline-primary me-2 button1"> Dia/Noche <img class="MiPerfil" src="/botones/Vision_Flat.png"/></button>
-          </div>
-        </header>
-      </div>
-  <!-- FIN NAVBAR -->
+    <div class="container-fluid bdn">
+      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none">
+          <img src= "img/logos/logo-diamante-blanco.png"  style="width: 15%;" alt="logo">
+        </a>
+          
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="/" class="nav-link px-2 link-ul">Inicio</a></li>
+        </ul>
+  
+        <div class="col-md-3 text-end">
+          <a href="/registro"><button type="button" class="btn boton-registrate mx-2">Registrate</button></a>
+          <a href="/login"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Iniciar Sesion</button></a>
+        </div>
+      </header>
+    </div>
+      <!-- FIN NAVBAR -->
 
-    <section class="contenedorRegistro">
-        <div>
-            <form th:action="@{/registrar}" method="POST" class="form-registro">
-                
-                <div class="titulos-form">Nombre de Usuario</div>
-                <div>
-                    <label for="nombre"></label>
+    <section class="container-fluid contenedorRegistro">
+        
+        <div class="row">
+         <div class="container-fluid text-black text-center py-2 mt-2">
+            <img src="/img/logos/logo-negro.png"  class="pt-2" alt="" style="width: 250px; height: 60px;">
+          </div>
+        </div>
+        
+        <div class="row">
+        <div class="container-fluid d-flex justify-content-center align-items-center mt-5">
+            
+            <img src="/img/Information flow_Flatline.svg" style="width: 400px" class="imagen-registro">
+   
+            <form action="/registrar" method="POST" class="form-registro">
+                <div class="d-flex justify-content-start flex-column  mt-5">
                     <input class="texto" name="nombre" type="text" placeholder="Nombre de usuario" required>
-                </div>
-                <div class="titulos-form">Email</div>
-                <div>
-                    <label for="email"></label>
+                
                     <input class="texto" name="email" type="email" placeholder="Email" required>
-                </div>
-                <div class="titulos-form">Contraseña</div>
-                <div>
-                    <label for="password"></label>
+              
                     <input class="texto" name="password" type="password" placeholder="Contraseña" required>
-                </div>
-                <div class="titulos-form">Repetir contraseña</div>
-                <div>
-                    <label for="password2"></label>
+               
                     <input class="texto" name="password2" type="password" placeholder="Repetir contraseña" required>
+                </div>  
+                <div class="d-flex justify-content-center mt-4">
+                <button type="submit" class="btn boton-registrarte">Registrarte</button>
                 </div>
-                <button type="submit" class="btn btn-outline-primary">Aceptar</button>
-                <button type="reset" class="btn btn-outline-danger">Cancelar</button>
             </form>
+        </div>
         </div>
     </section>
 
-    <!-- INICIO FOOTER -->
-    <div class="container-fluid">
-        <footer class="d-flex flex-wrap align-items-center">
-          <p class="col-md-4 mb-0">&copy; Grupo 3, Egg Cooperation</p>
-      
-          <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto">
-          <img id="logoFooter" src="img/logo-diamante-blanco.png"><!-- REEMPLAZAR POR LOGO DE LA AGENCIA -->
-          </a>
-      
-          <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="#lettering" class="nav-link">Arriba</a></li>
-          </ul>
-        </footer>
-      </div>
-<!-- FIN FOOTER -->
+
+ <!-- JAVASCRIPT BOOTSTRAP -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
