--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/static/tablaProyectos.css
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/static/tablaProyectos.css
@@ -12,84 +12,59 @@ font-family: 'Titillium Web', sans-serif;
 
 */
 
-*{
-    background-color:rgb(33, 33, 33);
-    margin: 0 ;
-    padding: 0;
-    box-sizing: border-box;
+.bdn {
+    background-color: #212121;
+    font-family: 'Titillium Web', sans-serif;
 }
 
+.boton-iniciar-sesion {
+    border-color: #14FFEC;
+    color: #fff;
+}
+
+.boton-iniciar-sesion:hover {
+    background-color: #14FFEC;
+    color: #212121
+}
+
+.boton-registrate {
+    background-color: #14FFEC;
+    color: #212121;
+}
+
+.boton-registrate:hover {
+    background-color: none;
+    border-color: #14FFEC;
+    color: #fff;
+}
+
+.boton-enviar {
+    background-color: #14FFEC;
+}
+
+.boton-enviar:hover {
+    background-color: #11d3c3;
+}
+
+.link-ul {
+    color: #fff;
+}
+
+.link-ul:hover {
+    color: #14FFEC;
+}
+
+
+
 h1, h2, h3{
-    font-family:'Hind Siliguri', sans-serif;
-    color:rgb(255, 233, 177);
+    font-family:'Hind Siliguri', sans-serif !important;
 }
     
 p{
-    font-family: 'Hind Siliguri', sans-serif;
-    color: whitesmoke;
-}
-    
-header{
-    margin: 0%;
-}
-
-.button1{
-    color: white;
-    border-color: rgb(33, 33, 33);
-    font-family: 'Titillium Web', sans-serif;
-    background: transparent;
-}
-
-.button1:hover{
-    background-color: rgb(20, 255, 236);
-    color:rgb(33, 33, 33);
-    border-color: rgb(20, 255, 236);  
-}
-
-.listaNav{   
-    color: white !important;
-    text-decoration: none;
-    font-size: larger !important;
-    font-family: 'Titillium Web', sans-serif;
-}
-
-.listaNav:hover{
-    color:rgb(20, 255, 236) !important;
-}
-
-.MiPerfil {
-    width: 25% !important;
-    height: 25% !important;
-    background: transparent;
-}
-
-.diamante{
-    width: 30% !important;
-    height: 30% !important;  
-}
-
-#lettering{
-    width: 100% !important;
-    height: 100% !important;    
+    font-family: 'Hind Siliguri', sans-serif !important;
 }
 
 
-footer{
-    padding-top: 1%;
-    padding-bottom: 2%;
-}
-
-#logoFooter{
-    margin-bottom: 0;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    width: 10%;
-}
-
-.nav-link{
-    color: white !important;
-}
 
 
 
@@ -110,16 +85,37 @@ body{
     background-color: transparent;
 }
 
-#mensajeSuperior{
-    padding-top: 5%;
-    padding-bottom: 0%;
+
+
+#mensajeSuperior {
     background-color: transparent;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
-#mensajeSuperior p{
-    background-color: transparent;
+#burbuja{
+    background-color: rgb(255, 255, 255,0.30);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 20px 0 rgba(31,38,135,0.37);
+    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    padding: 10px;
+}
+
+#burbuja h1{
     color: rgb(33, 33, 33);
 }
+
+#mensajeSuperior p {
+    background-color: transparent;
+    color: rgb(33, 33, 33);
+    font-family: 'Hind Siliguri', sans-serif;
+}
+
+
+
 
 #mensajeFiltros{
     padding-top: 1%;
@@ -157,26 +153,28 @@ label p {
 
 
 
-table{ /*seccion*/
-    justify-content: center;
-    display: flex !important;
-    padding-top: 2%;
-    padding-bottom: 5%;
+.contenedorTabla{
+    padding-left: 10%;
 }
 
-tbody{
-    padding: 2%;
+table{ /*seccion*/
+    padding-top: 2%;
+    padding-bottom: 5%;
+    border-collapse: separate;
 }
+
 
 #filaTitulos{
     font-family:'Hind Siliguri', sans-serif;
     font-size: large;
+    background-color: rgb(33, 33, 33);
     color: rgb(255, 233, 177);
     text-align: center;
-    padding: 2%;
+    padding: 5%;
+    border-radius: 10px;
 }
 
-.celdas{
+td{
     font-family: 'Lora', sans-serif;
     color: rgb(33, 33, 33);
     text-align: center;
@@ -186,10 +184,23 @@ tbody{
     padding: 5px;
 }
 
-.filas{
-    padding: 10px;
+
+
+
+
+.footer{
+    background-color: rgb(33, 33, 33);
+    color: white;
 }
 
-.accionesTabla{
-    color:rgb(20, 255, 236);
+#logoFooter{
+   margin-bottom: 0;
+   align-items: center;
+   justify-content: center;
+   display: flex;
+   width: 10%;
+}
+
+.nav-link{
+   color: white !important;
 }
