--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/tablaClientes.html
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/tablaClientes.html
@@ -12,7 +12,7 @@
   <!-- ICONOS BOOTSTRAP -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="tablaProyectos.css">
+  <link rel="stylesheet" href="./tablaProyectos.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,9 +22,9 @@
 
 <body>
   <!-- INICIO NAVBAR -->
-  <div class="container-fluid">
-    <header class="d-flex flex-wrap align-items-center justify-content-md-between">
-      <a class="d-flex col-md-3">
+  <div class="container-fluid bdn">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+      <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
         <img class="diamante"
           src="https://see.fontimg.com/api/renderfont4/vmpKZ/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjMzNFMkRDIiwiYmdjIjoiIzAxMDEwMSIsInQiOjF9/ZGFzaGJvYXJk/ceceps-handwriting.png"
           alt="Handwriting fonts">
@@ -33,30 +33,35 @@
           alt="Lettering fonts">
       </a>
 
-      <ul class="nav">
-        <li><a href="index.html" class="nav-link listaNav">Inicio</a></li>
-        <li><a href="dashboard.html" class="nav-link listaNav">Atras</a></li>
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="index.html" id="inicio" class="nav-link px-2 link-ul">Inicio</a></li>
+        <li><a href="dashboard.html" class="nav-link px-2 link-ul">Atras</a></li>
       </ul>
 
-      <div class="col-md-3">
-        <button type="button" class="btn btn-outline-primary me-2 button1"><a href="perfil.html"><img class="MiPerfil"
-              src="/botones/MiPerfil.png" />Mi Perfil</a></button>
-        <button type="button" class="btn btn-outline-primary me-2 button1"> Dia/Noche <img class="MiPerfil"
-            src="/botones/Vision_Flat.png" /></button>
+      <div class="col-md-3 text-end">
+        <a href=""><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
+        <a href=""><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar Sesion</button></a>
+        <!-- falta accion -->
       </div>
     </header>
   </div>
   <!-- FIN NAVBAR -->
 
   <div class="contenedorBody">
-    <!-- INICIO TABLA -->
-    <section id="mensajeSuperior">
-      <h1 class="h1Tabla">Busqueda por Cliente</h1>
-      <p class="pTabla">Una vez eliminado algo no hay retroceso, por favor lea atentamente las advertencias</p>
-    </section>
 
+     <!--INICIO/BIENVENIDA-->
+  <div id="body">
+      <section id="mensajeSuperior">
+          <div id="burbuja">
+              <h1>Clientes</h1>
+              <p>A continuacion se listaran los clientes existentes en la base de datos, puede filtrarlos o no. Para modificar o eliminar debe acceder al mismo. </p>
+          </div>
+      </section>
+      <!-- FIN INICIO/BIENVENIDA-->
+      
+      <!-- INICIO FILTROS -->
     <section id="mensajeFiltros">
-      <form action="admin/cliente/filtroPorNombre" method="post"> <!-- VER -->
+      <form th:action="admin/cliente/filtroPorNombre" method="post"> <!-- VER -->
         <label for="nombre">
           <p>Filtro por nombre</p>
         </label>
@@ -64,16 +69,16 @@
         <button type="submit" class="btn btn-light">Buscar</button>
       </form>
 
-      <form action="admin/" method="post"> <!-- HAY QUE MODIFICAR -->
+      <form th:action="admin/cliente/filtroPorNombreProyecto" method="post"> <!-- HAY QUE MODIFICAR -->
         <label for="proyecto">
-          <p>Filtro por Proyecto</p>
+          <p>Filtro por nombre del proyecto</p>
         </label>
-        <input type="text" id="proyecto" name="proyecto" placeholder="Buscar por proyecto" />
+        <input type="text" id="proyecto" name="name" placeholder="Buscar por proyecto" />
         <button type="submit" class="btn btn-light">Buscar</button>
       </form> 
     
 
-      <form action="admin/cliente/filtroPorEmail" method="post"> <!-- VER -->
+      <form th:action="admin/cliente/filtroPorEmail" method="post"> <!-- VER -->
         <label for="mail">
           <p>Filtro por E-mail</p>
         </label>
@@ -81,44 +86,24 @@
         <button type="submit" class="btn btn-light">Buscar</button>
       </form>
     </section>
+<!-- FIN FILTROS -->
 
+<!-- INICIO TABLA -->
     <section class="contenedorTabla">
-      <table id="tabla">
+      <table>
         <thead>
-          <tr id="filaTitulos" class="filas">
+          <tr id="filaTitulos">
             <th scope="col">Usuario</th>
             <th scope="col">E-mail</th>
             <th scope="col">ROL</th>
             <th scope="col">Proyecto</th>
-            <th scope="col">Acciones</th>
           </tr>
         </thead>
         <tbody th:each="usuario:${listaClientes}" th:if="${usuario.rol == 'CLIENTE'}">
-          <tr class="filas">
-            <td class="celdas" th:text="${usuario.nombre}"></td>
-            <td class="celdas" th:text="${usuario.email}"></td>
-            <td class="celdas" th:text="${usuario.rol}"></td>
-            <td><i id="listaProyectos" class="accionesTabla"> 
-              <a th:href="@{proyectos/listar/cliente/__${usuario.id}__}" > 
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
-                  viewBox="0 0 16 16">
-                  <path fill-rule="evenodd"
-                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-                </svg>
-              </a>
-           </i>
-           
-              <button type="button" id="eliminar" class="accionesTabla">
-                <a th:href="@{usuario/eliminar/__${usuario.id}__}"></a> <!-- COMPLETAR -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
-                  viewBox="0 0 16 16">
-                  <path
-                    d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-                  <path fill-rule="evenodd"
-                    d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                </svg>
-              </button>
-            </td>
+          <tr>
+            <td th:text="${usuario.nombre}"> NOMBRE PRUEBA</td>
+            <td th:text="${usuario.email}"> EMAIL PRUEBA</td>
+            <td th:text="${usuario.rol}"> ROL PRUEBA</td>
           </tr>
         </tbody>
       </table>
@@ -127,21 +112,20 @@
 
   </div>
 
-  <!-- INICIO FOOTER -->
-  <div class="container-fluid">
-    <footer class="d-flex flex-wrap align-items-center">
-      <p class="col-md-4 mb-0">&copy; Grupo 3, Egg Cooperation</p>
 
-      <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto">
-        <img id="logoFooter" src="img/logo-diamante-blanco.png"><!-- REEMPLAZAR POR LOGO DE LA AGENCIA -->
-      </a>
-
-      <ul class="nav col-md-4 justify-content-end">
-        <li class="nav-item"><a href="#lettering" class="nav-link">Arriba</a></li>
-      </ul>
-    </footer>
-  </div>
-  <!-- FIN FOOTER -->
+  
+ <!-- INICIO FOOTER -->
+ <div class="container-fluid footer">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+    <p class="col-md-4 mb-0" style="font-size: 15px;">&copy; Grupo 3, Egg Cooperation</p>
+    <img src="/src/main/resources/static/img/logo-diamante-blanco.png"
+        style="width: 45px; height: 40px; padding-right: 10px;" alt="">
+    <ul class="nav col-md-4 justify-content-end">
+      <li class="nav-item"><a href="#inicio" class="nav-link px-2 text-white">Arriba</a></li>
+    </ul>
+  </footer>
+</div>
+<!-- FIN FOOTER -->
 </body>
 
 </html>
