--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/indexTrabajador.html
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/indexTrabajador.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeThink</title>
+    <title>WeThink-Trabajador</title>
     <!-- CSS BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -13,7 +13,7 @@
     <!-- ICONOS BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="../static/indexTrabajador.css">
+    <link rel="stylesheet" href="/indexTrabajador.css">
     <!-- FONT TITULO -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,21 +34,21 @@
     <!-- INICIO NAVBAR -->
     <div class="container-fluid bdn">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-            <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
+            <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
                 <img src="img/logos/logo-diamante-blanco.png" style="width: 15%;" alt="logo">
                 <img id="lettering"
                     src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png"
-                    alt="Lettering fonts">
+                    alt="wethink">
             </a>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="index.html" class="nav-link px-2 link-ul">Inicio</a></li>
+                <li><a href="/index" class="nav-link px-2 link-ul">Inicio</a></li>
                 <li><a href="#Agenda" class="nav-link px-2 link-ul">Agenda</a></li>
             </ul>
 
             <div class="col-md-3 text-end">
-                <a href=""><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
-                <a href=""><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar
+                <a href="/perfil"><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
+                <a th:href="@{/logout}"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar
                         Sesion</button></a><!-- falta accion -->
             </div>
         </header>
@@ -77,19 +77,15 @@
                         <th scope="col">Proyecto</th>
                         <th scope="col">Inicio</th>
                         <th scope="col">Fin</th>
-                        <th scope="col">Cliente</th>
                         <th scope="col">Estado</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="proyecto:${listaProyectos}">
-                        <td class="celdas" th:text="${proyecto.nombre}"><a th:href="@{proyecto/__${proyecto.id}__}"></td>
+                    <tr th:each="proyecto : ${proyectos}">
+                        <td class="celdas" th:text="${proyecto.nombre}"><a th:href="@{proyecto/__${proyecto.id}__}"></a></td>
                         <!--no hay vista, VER LUEGO DE ARREGLAR RELACIONES EN BACK-->
                         <td class="celdas" th:text="${proyecto.fechaInicio}"></td>
                         <td class="celdas" th:text="${proyecto.fechaFin}"></td>
-                        <td class="celdas" th:text="${proyecto.usuario.nombre}">
-                            <!--VER LUEGO DE ARREGLAR RELACIONES EN BACK-->
-                        </td>
                         <td class="celdas" th:text="${proyecto.estado}"></td>
                     </tr>
                 </tbody>
@@ -104,7 +100,7 @@
               <div class="box">
                   <div class="content">
                       <i class="bi bi-list-task"></i>
-                    <h3 id="Agenda">Agenda</h3>
+                    <h3 id="Agenda">Agenda</h3>    <!-- HACER VISTA-->
                   </div>
                 </div>
               </a>
@@ -115,7 +111,7 @@
                 <div class="box">
                   <div class="content">
                       <i class="bi bi-sticky"></i>
-                    <h3>Crear Proyecto</h3>
+                    <h3>Crear Proyecto</h3>    <!-- HACER FORMULARIO-->
                   </div>
                 </div>
               </a>
@@ -133,14 +129,11 @@
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
             <p class="col-md-4 mb-0" style="font-size: 15px;">&copy; Grupo 3, Egg Cooperation</p>
 
-            <a href="/"
-                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none">
-                <img src="/src/main/resources/static/img/logo-diamante-blanco.png"
+            <img src="/img/logo-diamante-blanco.png"
                     style="width: 45px; height: 40px; padding-right: 10px;" alt="">
-            </a>
 
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-white">Inicio</a></li>
+                <li class="nav-item"><a href="/index" class="nav-link px-2 text-white">Inicio</a></li>
             </ul>
         </footer>
     </div>
@@ -151,7 +144,6 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <!-- JAVASCRIPT -->
-    <script src="script.js"></script>
 </body>
 
 </html>
