--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
@@ -12,7 +12,7 @@
   <!-- ICONOS BOOTSTRAP -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="./tablaProyectos.css">
+  <link rel="stylesheet" href="/tablaProyectos.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,23 +24,23 @@
   <!-- INICIO NAVBAR -->
   <div class="container-fluid bdn">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-      <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
+      <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
         <img class="diamante"
           src="https://see.fontimg.com/api/renderfont4/vmpKZ/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjMzNFMkRDIiwiYmdjIjoiIzAxMDEwMSIsInQiOjF9/ZGFzaGJvYXJk/ceceps-handwriting.png"
-          alt="Handwriting fonts">
+          alt="dashboars">
         <img id="lettering"
           src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png"
-          alt="Lettering fonts">
+          alt="wethink">
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="index.html" id="inicio" class="nav-link px-2 link-ul">Inicio</a></li>
-        <li><a href="dashboard.html" class="nav-link px-2 link-ul">Atras</a></li>
+        <li><a href="/index" id="inicio" class="nav-link px-2 link-ul">Inicio</a></li>
+        <li><a href="/dashboard" class="nav-link px-2 link-ul">Atras</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
-        <a href=""><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
-        <a href=""><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar Sesion</button></a>
+        <a href="/perfil"><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
+        <a href="/cerrarSesion"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar Sesion</button></a>
         <!-- falta accion -->
       </div>
     </header>
@@ -61,7 +61,7 @@
       
       <!-- INICIO FILTROS -->
     <section id="mensajeFiltros">
-      <form th:action="admin/proyecto/filtroPorNombre" method="post"> <!-- VER -->
+      <form th:action="/filtroPorNombre" method="post"> <!-- VER -->
         <label for="nombre">
           <p>Filtro por nombre</p>
         </label>
@@ -69,7 +69,7 @@
         <button type="submit" class="btn btn-light">Buscar</button>
       </form>
 
-      <form th:action="admin/proyecto/filtroPorFechaInicio" method="post"> <!-- HAY QUE MODIFICAR -->
+      <form th:action="/filtroPorFechaInicio" method="post"> <!-- HAY QUE MODIFICAR -->
         <label for="inicio">
           <p>Filtro por fecha de inicio</p>
         </label>
@@ -77,7 +77,7 @@
         <button type="submit" class="btn btn-light">Buscar</button>
       </form> 
 
-      <form th:action="admin/proyecto/filtroPorFechaFin" method="post"> <!-- HAY QUE MODIFICAR -->
+      <form th:action="/filtroPorFechaFin" method="post"> <!-- HAY QUE MODIFICAR -->
         <label for="fin">
           <p>Filtro por fecha de fin</p>
         </label>
@@ -85,7 +85,7 @@
         <button type="submit" class="btn btn-light">Buscar</button>
       </form> 
 
-      <form th:action="admin/proyecto/filtroPorEstado" method="post"> <!-- HAY QUE MODIFICAR -->
+      <form th:action="/filtroPorEstado" method="post"> <!-- HAY QUE MODIFICAR -->
         <label for="estado">
           <p>Filtro por estado</p>
         </label>
@@ -128,7 +128,7 @@
  <div class="container-fluid footer">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
     <p class="col-md-4 mb-0" style="font-size: 15px;">&copy; Grupo 3, Egg Cooperation</p>
-    <img src="/src/main/resources/static/img/logo-diamante-blanco.png"
+    <img src="/img/logo-diamante-blanco.png"
         style="width: 45px; height: 40px; padding-right: 10px;" alt="">
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="#inicio" class="nav-link px-2 text-white">Arriba</a></li>
