--- a/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/dashboard.html
+++ b/GestionDePublicidad/GestionDePublicidad/src/main/resources/templates/dashboard.html
@@ -38,7 +38,7 @@
       </ul>
 
       <div class="col-md-3 text-end">
-        <a href="/perfil"><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
+        <a th:href="@{/perfil}"><button type="button" class="btn boton-registrate">Mi perfil</button></a><!-- falta vista -->
         <a th:href="@{/logout}"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">Cerrar Sesion</button></a>
       </div>
     </header>
